--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,9 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-Container {
+  padding: 10 10 10 10;
+  display: flex;
+  flex-direction: row;
+  height: 100px;
 }
