--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #030405; 
+  
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
 }
 
 code {
